# lp1_ejercicios

./: README.md
15_2_lab5/: ListaDeClases.txt
15_2_lab5/preg_1_2_3/: CMakeLists.txt  Funciones.cpp  Funciones.h  ListaDeClases.txt  main.cpp
16_1_parcial/: entrada.txt
16_1_parcial/preg_1_2_3/: CMakeLists.txt  entrada.txt  entradaYsalida.cpp  entradaYsalida.h  main.cpp  ordenacion.cpp  ordenacion.h
16_2_parcial/preg06/: CMakeLists.txt  Funciones-tweets.cpp  Funciones-tweets.h  main.cpp  tweets.txt
18_1_lab6/: Biblioteca.csv
18_1_lab6/preg01/: CMakeLists.txt  Funciones-Preg01.h  main.cpp
18_1_lab6/preg02/: Biblioteca.csv  CMakeLists.txt  Funciones-Preg01.cpp  Funciones-Preg02.cpp  Funciones-Preg02.h  main.cpp
18_1_parcial/pregunta_1/: CMakeLists.txt  Funciones-Preg01.cpp  main.cpp
18_1_parcial/pregunta_2/: CMakeLists.txt  Funciones-Preg01.cpp  Funciones-Preg02.cpp  main.cpp
18_1_parcial/pregunta_3/: .gitignore  Biblioteca.csv  CMakeLists.txt  Funciones-Preg03.cpp  Funciones-Preg03.h  main.cpp
18_1_parcial/pregunta_4/: Biblioteca.csv  CMakeLists.txt  Funciones-Preg01.h  Funciones-Preg02.cpp  Funciones-Preg02.h  Funciones-Preg03.cpp  Funciones-Preg04.cpp  Funciones-Preg04.h  main.cpp
18_2_lab5/preg01/: Bib_Func_Provincias.h  CMakeLists.txt  main.cpp  provincia_inf_forestal.txt
18_2_lab5/preg02/: Bib_Func_Provincias.cpp  main.cpp  (+3 more)
18_2_lab5/preg03/: .gitignore  Bib_Func_ExtraccionesF.cpp  Bib_Func_ExtraccionesF.h  Bib_Func_Provincias.cpp  Biblioteca_Func_Incendios.cpp  Biblioteca_Func_Incendios.h  CMakeLists.txt  main.cpp  provincia_inf_forestal.txt
(+39 files in other folders)
